cmake_minimum_required(VERSION 2.8)
project( object-recognition )
find_package( OpenCV REQUIRED )
if( CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX )
	add_definitions("-fno-strict-aliasing -Wall -std=c++0x -g")
endif( CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX )
add_executable( object-recognition src/main.cpp )
target_link_libraries( object-recognition ${OpenCV_LIBS} )